tests/baselines/reference/accessors_spec_section-4.5_error-cases.errors.txt
accessors_spec_section-4.5_error-cases.ts(3,48): error TS2322: Type 'string' is not assignable to type 'number'.
accessors_spec_section-4.5_error-cases.ts(5,47): error TS2322: Type 'string' is not assignable to type 'number'.
accessors_spec_section-4.5_error-cases.ts(9,52): error TS2322: Type 'number' is not assignable to type 'string'.
accessors_spec_section-4.5_error-cases.ts(11,51): error TS2322: Type 'number' is not assignable to type 'string'.


==== accessors_spec_section-4.5_error-cases.ts (4 errors) ====
    class LanguageSpec_section_4_5_error_cases {
        public set AnnotatedSetter_SetterFirst(a: number) { }
        public get AnnotatedSetter_SetterFirst() { return ""; }
                                                   ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
        public get AnnotatedSetter_SetterLast() { return ""; }
                                                  ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        public set AnnotatedSetter_SetterLast(a: number) { }
    
        public get AnnotatedGetter_GetterFirst(): string { return ""; }
        public set AnnotatedGetter_GetterFirst(aStr) { aStr = 0; }
                                                       ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
        public set AnnotatedGetter_GetterLast(aStr) { aStr = 0; }
                                                      ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        public get AnnotatedGetter_GetterLast(): string { return ""; }
    }